fetch-data.yml: Output script name before running

--- a/.github/workflows/fetch-data.yml
+++ b/.github/workflows/fetch-data.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         for script in "$(pwd)/Scripts/"*
         do
+          echo "Running $(basename "${script}")..."
           "${script}"
         done
     - name: Set up git user
