Run apt-get update

--- a/.github/workflows/fetch-data.yml
+++ b/.github/workflows/fetch-data.yml
@@ -17,6 +17,7 @@ jobs:
         persist-credentials: true
     - name: Install dependencies
       run: |
+        sudo apt-get update
         sudo apt-get install libxml2-utils
     - name: Fetch data and generate feeds
       run: |
